# Octarine-Engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  components.json  events.json  index.html  lua_api.smoke.lua  modules.json  systems.json  vcpkg-configuration.json  vcpkg.json
scripts/octarine-icon-tool/: CMakeLists.txt  main.cpp
src/: AutoFormatProbe.h  CMakeLists.txt  Main.cpp
src/AssetManager/: AssetCatalog.cpp  AssetCatalog.h  AssetHotReload.cpp  AssetHotReload.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetPak.cpp  AssetPak.h  AssetRefcounter.h  AssetReference.h  AtlasBaker.cpp  AtlasBaker.h  AudioClipStore.cpp  AudioClipStore.h  AudioNormalizer.cpp  AudioNormalizer.h  FontStore.cpp  FontStore.h  GlyphAtlas.cpp  GlyphAtlas.h  SceneAssetScanner.cpp  SceneAssetScanner.h  TextureAtlasBaker.cpp  TextureAtlasBaker.h  TextureStore.cpp  TextureStore.h
src/Audio/: AudioTrackCache.h
src/Components/: AnimationComponent.h  AudioActiveTag.h  AudioListenerComponent.h  AudioSinkComponent.h  AudioSourceComponent.h  BoxColliderComponent.h  CameraComponents.h  CameraFollowComponent.h  EntityMaskComponent.h  GlobalTransformComponent.h  GroupComponent.h  HealthComponent.h  KeyboardControlComponent.h  NameComponent.h  PositionComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  RotationComponent.h  ScaleComponent.h  ScriptComponent.h  SpriteComponent.h  SquarePrimitiveComponent.h  TagComponent.h  TextLabelComponent.h  TransformComponent.h  UIAnchorComponent.h  UIButtonComponent.h  UICanvasComponent.h  UIRectComponent.h  UIZIndexComponent.h  ViewportInfo.h
src/Deploy/: Adb.cpp  Adb.h
src/Dev/: DevListenClient.cpp  DevListenClient.h  DevListenDispatch.cpp  DevListenDispatch.h  DevListenServer.cpp  DevListenServer.h
src/ECS/: ArchetypeQuery.h  CommandBuffer.h  Component.h  Context.h  ECS.cpp  ECS.h  Entity.h  EntityCommandBuffer.h  Iter.h  Iterable.h  Query.h  Registry.cpp  Registry.h  System.h
src/Editor/: EditorLayoutPresets.cpp  EditorLayoutPresets.h  EditorPersistence.cpp  EditorPersistence.h  ExportBuilder.cpp  ExportBuilder.h  HotPusher.cpp  HotPusher.h  PlayerLauncher.cpp  PlayerLauncher.h
src/Editor/Fonts/: LICENSE.txt  Roboto_Medium.h
src/Editor/Inspectors/: AnimationComponentInspector.h  BoxColliderComponentInspector.h  CameraFollowComponentInspector.h  ComponentInspectorRegistry.h  EditorInspector.h  EntityMaskComponentInspector.h  GlobalTransformComponentInspector.h  HealthComponentInspector.h  InspectorWidgets.h  PositionComponentInspector.h  ProjectileComponentInspector.h  ProjectileEmitterComponentInspector.h  RegisterAllInspectors.cpp  RegisterAllInspectors.h  RigidBodyComponentInspector.h  RotationComponentInspector.h  ScaleComponentInspector.h  ScriptComponentInspector.h  SpriteComponentInspector.h  SquarePrimitiveComponentInspector.h  TextLabelComponentInspector.h  UIButtonComponentInspector.h
src/Editor/Layouts/: DefaultLayout.h
src/Editor/Panels/: EditorAssetBrowserPanel.cpp  EditorAssetBrowserPanel.h  EditorBuildDialog.cpp  EditorBuildDialog.h  EditorConsolePanel.cpp  EditorConsolePanel.h  EditorDevicesPanel.cpp  EditorDevicesPanel.h  EditorDialogService.cpp  EditorDialogService.h  EditorHierarchyPanel.cpp  EditorHierarchyPanel.h  EditorImGuiBackend.cpp  EditorImGuiBackend.h  EditorOutputPanels.cpp  EditorOutputPanels.h  EditorPanelHost.cpp  EditorPanelHost.h  EditorProjectPanels.cpp  EditorProjectPanels.h  EditorSceneWindow.cpp  EditorSceneWindow.h  EditorSettingsPanels.cpp  EditorSettingsPanels.h  EditorSigningPanel.cpp  EditorSigningPanel.h  EditorToolbarPanel.cpp  EditorToolbarPanel.h
src/Engine/: EditorBootstrap.cpp  EditorBootstrap.h  EditorExceptionGuard.h  EngineBootstrap.cpp  EngineBootstrap.h  EngineContext.h  EngineRuntime.cpp  EngineRuntime.h  FrameLoop.cpp  FrameLoop.h  LuaProtect.h  SceneLoader.cpp  SceneLoader.h  SdlFileReader.h
src/Engine/Platform/: PlatformPaths.cpp  PlatformPaths.h
src/EventBus/: Event.h  EventBus.h
src/Events/: AudioPlayEvent.h  CollisionBatchEvent.h  CollisionEvent.h  CollisionExitBatchEvent.h  KeyInputEvent.h  MouseInputEvent.h  MouseWheelEvent.h
src/Game/: ECSLoader.cpp  ECSLoader.h  EngineOptions.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  LevelLoader.cpp  LevelLoader.h
src/General/: BlendMode.h  Collections.h  Color.h  Constants.h  FileSandbox.cpp  FileSandbox.h  FileWatcher.cpp  FileWatcher.h  Logger.cpp  Logger.h  LuaEscape.cpp  LuaEscape.h  PerfUtils.h  Pool.h  Rect.h  SDL3_Linux_Stubs.cpp  SparsePool.h  SpriteFlip.h  SystemMemory.cpp  SystemMemory.h  ThreadPool.h  Utils.h
src/Lua/: ComponentLuaFactory.h  LuaApiManifest.cpp  LuaApiManifest.h  LuaBindingContext.h  LuaEntityLoader.h  LuaTableSerializer.cpp  LuaTableSerializer.h
src/Lua/Modules/: LuaModule.h  (+23 more)
src/MapEditor/: MapEditor.cpp  MapEditor.h
src/Process/: Process.cpp  Process.h
src/Project/: ProjectIni.cpp  ProjectIni.h
src/Renderer/: RenderCommands.h  RenderCulling.h  RenderKey.h  RenderQueue.h  RenderableType.h  Renderer.cpp  Renderer.h  SpriteRenderCache.h
src/Secrets/: SecretStore.h  SecretStore_Linux.cpp  SecretStore_Windows.cpp  SecretStore_macOS.cpp
src/Systems/: AnimationSystem.h  AudioCullingSystem.h  AudioSystem.cpp  AudioSystem.h  CameraFollowSystem.h  CollisionResponseParallel.h  CollisionSystem.h  DamageSystem.h  DisplayHealthSystem.h  DopplerSystem.h  DrawColliderSystem.h  EntityPoolSystem.h  InputSystem.cpp  InputSystem.h  KeyboardControlSystem.h  MovementSystem.h  ObstacleBounceSystem.h  OffScreenDespawnSystem.h  PerfOverlaySystem.cpp  PerfOverlaySystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderDebugGUISystem.cpp  RenderDebugGUISystem.h  RenderGUISystem.h  RenderPrimitiveSystem.h  RenderSpriteSystem.h  RenderTextSystem.h  RenderUIPrimitiveSystem.h  RenderUISpriteSystem.h  ScriptCollisionSystem.h  ScriptSystem.h  SpatialAudioSystem.h  TransformSystem.h  UIButtonSystem.h  UILayoutSystem.h  UpdateListenerTransformSystem.h  VelocityIntegrationSystem.h
(+140 files in other folders)
